<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/run"
        android:icon="@mipmap/ic_play_arrow_white_24dp"
        android:orderInCategory="100"
        android:title="@string/run"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/delay"
        android:icon="@mipmap/ic_timer_white_24dp"
        android:orderInCategory="101"
        android:title="@string/delay"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_hello_world"
        android:orderInCategory="102"
        android:title="@string/hello_world_example"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_output"
        android:orderInCategory="103"
        android:title="@string/menu_output"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_clear_output"
        android:orderInCategory="104"
        android:title="@string/clear_output" />
    <item
        android:id="@+id/menu_save"
        android:orderInCategory="105"
        android:title="@string/save" />
    <item
        android:id="@+id/menu_load"
        android:orderInCategory="106"
        android:title="@string/load" />
    <item
        android:id="@+id/night_theme"
        android:orderInCategory="107"
        android:title="@string/theme_ellipsis" />
</menu>
