<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClickIncrement"
            android:text="@string/increment"
            android:textSize="36sp" />

        <Button
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClickDecrement"
            android:text="@string/decrement"
            android:textSize="36sp" />

        <Button
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClickOutput"
            android:text="@string/output"
            android:textSize="36sp" />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClickBracketOpen"
            android:text="@string/bracket_open"
            android:textSize="36sp" />

        <Button
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClickBracketClose"
            android:text="@string/bracket_close"
            android:textSize="36sp" />

        <Button
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClickInput"
            android:text="@string/input"
            android:textSize="36sp" />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClickPointerLeft"
            android:text="@string/pointerPrevious"
            android:textSize="36sp" />

        <Button
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="onClickPointerRight"
            android:text="@string/pointerNext"
            android:textSize="36sp" />

        <com.teinvdlugt.android.brainfuckinterpreter.BackspaceButton
            android:id="@+id/backspace_key"
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/backspace_xs"
            android:src="@mipmap/ic_backspace_black_24dp"
            android:textSize="36sp" />
    </TableRow>
</TableLayout>