<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="HardcodedText">

    <Button
        android:layout_margin="4dp"
        android:id="@+id/button11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:text="+"
        android:textColor="?android:textColorPrimary"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/button21"
        app:layout_constraintEnd_toStartOf="@id/button12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_margin="4dp"
        android:id="@+id/button12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:text="–"
        android:textColor="?android:textColorPrimary"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/button22"
        app:layout_constraintEnd_toStartOf="@id/button13"
        app:layout_constraintStart_toEndOf="@id/button11"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_margin="4dp"
        android:id="@+id/button13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:text="."
        android:textColor="?android:textColorPrimary"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/button23"
        app:layout_constraintEnd_toStartOf="@id/button14"
        app:layout_constraintStart_toEndOf="@id/button12"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_margin="4dp"
        android:id="@+id/button14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:text=","
        android:textColor="?android:textColorPrimary"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/button23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button13"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ################################################### -->

    <Button
        android:layout_margin="4dp"
        android:id="@+id/button21"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:text="&lt;"
        android:textColor="?android:textColorPrimary"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/button31"
        app:layout_constraintEnd_toStartOf="@id/button22"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button11" />

    <Button
        android:layout_margin="4dp"
        android:id="@+id/button22"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:text="&gt;"
        android:textColor="?android:textColorPrimary"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/button32"
        app:layout_constraintEnd_toStartOf="@id/button23"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button21"
        app:layout_constraintTop_toBottomOf="@id/button12" />

    <ImageButton
        android:contentDescription="@string/backspace_xs"
        android:layout_margin="4dp"
        android:id="@+id/button23"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_keyboard_backspace_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/button33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@id/button22"
        app:layout_constraintTop_toBottomOf="@id/button13" />

    <!-- ################################################### -->

    <Button
        android:layout_margin="4dp"
        android:id="@+id/button31"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:text="["
        android:textColor="?android:textColorPrimary"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button21" />

    <Button
        android:layout_margin="4dp"
        android:id="@+id/button32"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="]"
        android:textColor="?android:textColorPrimary"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button33"
        app:layout_constraintStart_toEndOf="@id/button31"
        app:layout_constraintTop_toBottomOf="@id/button22" />

    <ImageButton
        android:contentDescription="@string/space_xs"
        android:layout_margin="4dp"
        android:id="@+id/button33"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_keyboard_space_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button34"
        app:layout_constraintStart_toEndOf="@id/button32"
        app:layout_constraintTop_toBottomOf="@id/button23"/>

    <ImageButton
        android:contentDescription="@string/return_xs"
        android:layout_margin="4dp"
        android:id="@+id/button34"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_keyboard_return_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button33"
        app:layout_constraintTop_toBottomOf="@id/button23" />
</androidx.constraintlayout.widget.ConstraintLayout>